--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <h2>About Me</h2>
             <p>Hello! I am a web developer passionate about creating stunning websites.</p>
         </section>
+
+        <!-- Add more content here later -->
     </body>
 </html>
